--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="total-box">
         <div class="total-row">
-            <div class="total-title">ŞU ANKİ VARLIK (Faiz Hariç)</div>
+            <div class="total-title">ŞU ANKİ VARLIK (Vadeli Hariç)</div>
             <div class="total-amount small-total" id="grandTotalCurrent">---</div>
         </div>
         <div class="total-divider"></div>
